# dataset_cleaner

./: .gitignore  .pre-commit-config.yaml  =10.0.0  =2.0.0  CHANGELOG.md  LICENSE  MIGRATION_GUIDE.md  README.md  REFACTORING_SUMMARY.md  cleaner.py  logs  pdf_insert.py  pyproject.toml  saqa.txt  saqaCleaned.txt
.cursor/plans/: add_word_healer_module_for_ocr_broken_words_repair_f726f12c.plan.md  architectural_review_and_refactor_e82200eb.plan.md  enhanced_word_healer_with_ocr_normalization_1ab4176f.plan.md
.github/workflows/: ci.yml
archive/: .gitkeep
cli/: __init__.py  common.py  pdf_extract.py  run.py  text_clean.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  INSTALLATION.md  QUICK_REFERENCE.md  REFACTORING_BEFORE_AFTER.md  USAGE.md
scripts/: __init__.py  setup_workspace.py
source/: .gitkeep
src/: __init__.py  __main__.py  base_processor.py  config.py  constants.py  exceptions.py  language_detector.py  logging_config.py  parquet_processor.py  pdf_processor.py  progress.py  text_cleaner.py  utils.py  word_healer.py
tests/: __init__.py  test_parquet_optional_deps.py  test_pdf_processor.py  test_progress.py  test_text_cleaner.py  test_utils.py  test_word_healer.py
workspace/results/: .gitignore
